# GLiNER2

./: evaluate_ner.py  inference.py  pyproject.toml  submitjob.sh  train.py
gliner2/: layers.py  model.py  processor.py  span_rep.py
gliner2/inference/: engine.py  schema.py  schema_model.py
gliner2/training/: data.py  trainer.py
tests/: test_entity_decoding.py  test_entity_extraction.py  test_evaluate_ner.py  test_inference_checks.py  test_processor_text_integrity.py  test_span_entity_training_data.py  test_trainer_resume.py
